implement Auth Stubs
